--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://ulems.my.id/assets/images/icon-192x192.png" />
+      href="./assets/images/Hs.png"" />
     <title>Undangan Pernikahan Yadi & Putri</title>
 
     <!-- SEO Tag -->
@@ -23,7 +23,7 @@
       content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
     <meta
       property="og:image"
-      content="https://ulems.my.id/assets/images/bg.jpeg" />
+      content="./assets/images/thumbnail1.png"" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
     <meta property="og:type" content="website" />
