--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
     <meta
       property="og:image"
-      content="./assets/images/thumbnail1.png"" />
+      content="./assets/images/thumbnail.png"" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="id_ID" />
     <meta property="og:site_name" content="Undangan" />
-    <meta property="og:url" content="https://ulems.my.id/" />
+    <meta property="og:url" content="./assets/" />
 
     <!-- Preconnect CDN -->
     <link
