--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
     <meta
       property="og:image"
-      content="./assets/images/thumbnail.png"" />
-    <meta property="og:image:type" content="image/jpeg" />
+      content="./assets/images/thumbnail.jpg"" />
+    <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="id_ID" />
