--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     <!-- SEO Tag -->
     <meta property="og:title" content="Undangan Pernikahan Yadi & Putri" />
 <meta property="og:description" content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
-<meta property="og:image" content="https://ulems.my.id/assets/images/thumbnail1.jpg" />
+<meta property="og:image" content="./assets/images/thumbnail.jpg" />
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="id_ID" />
-<meta property="og:site_name" content="Undangan" />
-<meta property="og:url" content="https://ulems.my.id/" />
+<meta property="og:site_name" content="Undangan" /> />
 
 
     <!-- Preconnect CDN -->
