--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
 
     <!-- SEO Tag -->
     <meta property="og:title" content="Undangan Pernikahan Yadi & Putri" />
-<meta property="og:description" content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
-<meta property="og:image" content="./assets/images/thumbnail.jpg" />
-<meta property="og:image:type" content="image/jpeg" />
-<meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
-<meta property="og:type" content="website" />
-<meta property="og:locale" content="id_ID" />
-<meta property="og:site_name" content="Undangan" /> />
+    <meta
+      property="og:description"
+      content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
+    <meta
+      property="og:image"
+      content="./assets/images/thumbnail.jpg"
+      alt="bg" />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="id_ID" />
+    <meta property="og:site_name" content="Undangan" />
 
 
     <!-- Preconnect CDN -->
