--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
     <meta
       property="og:image"
-      content="./assets/images/thumbnail.jpg"
+      content="/assets/images/thumbnail.jpg"
       alt="bg" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
