--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
     <meta
       property="og:image"
-      content="/assets/images/thumbnail.jpg"
+      content="/assets/images/thumbnail3.jpeg"
       alt="bg" />
-    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="id_ID" />
