--- a/index.html
+++ b/index.html
@@ -388,6 +388,48 @@
                     class="d-block w-100"
                     onclick="util.modal(this)" />
                 </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri4.jpg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri5.jpg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri6.jpg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri7.jpg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri8.JPG"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri9.jpg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri10.jpg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
               </div>
 
               <button
@@ -442,19 +484,37 @@
               <div class="carousel-inner rounded-4">
                 <div class="carousel-item active">
                   <img
-                    src="/assets/images/galeri4.jpg"
+                    src="/assets/images/galeri11.jpg"
                     class="d-block w-100"
                     onclick="util.modal(this)" />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/assets/images/galeri5.jpg"
+                    src="/assets/images/galeri12.jpg"
                     class="d-block w-100"
                     onclick="util.modal(this)" />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/assets/images/galeri6.jpg"
+                    src="/assets/images/galeri13.jpg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri14.jpg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri15.jpg"
+                    class="d-block w-100"
+                    onclick="util.modal(this)" />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/assets/images/galeri16.jpg"
                     class="d-block w-100"
                     onclick="util.modal(this)" />
                 </div>
