--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </div>
 
           <h1 class="font-esthetic my-4" style="font-size: 3rem">
-            Wahyu & Riski
+            Muliyadi & Putriani
           </h1>
           <h4>Senin, 11 Desember 2023</h4>
 
@@ -199,9 +199,9 @@
                   alt="cowo"
                   onclick="util.modal(this)" />
               </div>
-              <h1 class="font-esthetic" style="font-size: 3rem">Mulyadi</h1>
-              <h5 class="mt-3 mb-0">Putra Ke-</h5>
-              <p class="mb-0">Bapak ... & Ibu ...</p>
+              <h1 class="font-esthetic" style="font-size: 3rem">Muliyadi</h1>
+              <h5 class="mt-3 mb-0">Putra Ke-3</h5>
+              <p class="mb-0">Bapak Sugiman & Ibu Wagiem</p>
             </div>
 
             <h1 class="font-esthetic my-4" style="font-size: 4rem">&</h1>
@@ -213,9 +213,9 @@
                   alt="cewe"
                   onclick="util.modal(this)" />
               </div>
-              <h1 class="font-esthetic" style="font-size: 3rem">Putriyani</h1>
-              <h5 class="mt-3 mb-0">Putri Ke-</h5>
-              <p class="mb-0">Bapak ... & Ibu ...</p>
+              <h1 class="font-esthetic" style="font-size: 3rem">Putriani</h1>
+              <h5 class="mt-3 mb-0">Putri Ke-7</h5>
+              <p class="mb-0">Bapak Salman & Ibu Tarina</p>
             </div>
           </div>
         </div>
@@ -308,7 +308,7 @@
             <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
   <div class="responsive-iframe-container">
     <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.1399828223443!2d107.11112227360223!3d-6.2452767937430576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e698f0e9e984eab%3A0xf3798ac1966dddd0!2sPeternakan%20Ikan%20Cupang%20mr.joe!5e0!3m2!1sid!2sid!4v1695008153457!5m2!1sid!2sid"
+      src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d886.3932055735245!2d103.43396137863621!3d-4.0670658450339765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sid!2sid!4v1699581332807!5m2!1sid!2sid"
       style="border:0"
       allowfullscreen=""
       loading="lazy"
@@ -316,14 +316,14 @@
   </div>
   <div class="py-2" data-aos="fade-up" data-aos-duration="1500">
     <a
-      href="https://maps.app.goo.gl/vWrVRdsYqsvny3PU6"
+      href="https://maps.app.goo.gl/zWEdt65zwQKGu5m66"
       target="_blank"
       class="btn btn-outline-light btn-sm rounded-pill shadow-sm mb-2 px-3">
       <i class="fa-solid fa-map-location-dot me-2"></i>Lihat Di Aplikasi Google
       Maps
     </a>
     <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem">
-      Jl. Kirana Raya Jl. Dahlia XVI No.13, RT.004/RW.019 kel, Wanajaya, Kec. Cibitung, Kabupaten Bekasi, Jawa Barat 17520
+      Kota Agung,Kec. Kota Agung, Kabupaten Lahat, Sumatera Selatan
     </p>
   </div>
 </div>
@@ -343,32 +343,59 @@
               Galeri
             </h1>
 
-            <div
+            <div 
               id="carousel-foto-satu"
               data-aos="fade-up"
               data-aos-duration="1500"
               class="carousel slide"
               data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button
-                  type="button"
-                  data-bs-target="#carousel-foto-satu"
-                  data-bs-slide-to="0"
-                  class="active"
-                  aria-current="true"
-                  aria-label="Slide 1"></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel-foto-satu"
-                  data-bs-slide-to="1"
-                  aria-label="Slide 2"></button>
-                <button
-                  type="button"
-                  data-bs-target="#carousel-foto-satu"
-                  data-bs-slide-to="2"
-                  aria-label="Slide 3"></button>
-              </div>
 
+            <div class="carousel-indicators">
+              <!-- Tambahkan indikator untuk setiap slide -->
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="0"
+                      class="active"
+                      aria-current="true"
+                      aria-label="Slide 1"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="1"
+                      aria-label="Slide 2"></button>
+              <!-- Tambahkan indikator hingga Slide 10 -->
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="2"
+                      aria-label="Slide 3"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="3"
+                      aria-label="Slide 4"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="4"
+                      aria-label="Slide 5"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="5"
+                      aria-label="Slide 6"></button>
+               <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="6"
+                      aria-label="Slide 7"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="7"
+                      aria-label="Slide 8"></button>                     
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="8"
+                      aria-label="Slide 9"></button>
+              <button type="button"
+                      data-bs-target="#carousel-foto-satu"
+                      data-bs-slide-to="9"
+                      aria-label="Slide 10"></button>
+            </div>
               <div class="carousel-inner rounded-4">
                 <div class="carousel-item active">
                   <img
@@ -479,6 +506,21 @@
                   data-bs-target="#carousel-foto-dua"
                   data-bs-slide-to="2"
                   aria-label="Slide 3"></button>
+                <button
+                  type="button"
+                  data-bs-target="#carousel-foto-dua"
+                  data-bs-slide-to="3"
+                  aria-label="Slide 4"></button>
+                <button
+                  type="button"
+                  data-bs-target="#carousel-foto-dua"
+                  data-bs-slide-to="4"
+                  aria-label="Slide 5"></button>  
+                <button
+                  type="button"
+                  data-bs-target="#carousel-foto-dua"
+                  data-bs-slide-to="5"
+                  aria-label="Slide 6"></button>  
               </div>
 
               <div class="carousel-inner rounded-4">
@@ -555,7 +597,7 @@
       </svg>
 
       <!-- Hadiah -->
-      <div class="container">
+        <div class="container">
         <div class="py-4">
           <div class="text-center">
             <h1 class="font-esthetic mt-0 mb-3" style="font-size: 3rem">
@@ -575,7 +617,7 @@
                   data-aos="fade-down"
                   data-aos-duration="1500">
                   <img
-                    src="https://upload.wikimedia.org/wikipedia/id/thumb/5/55/BNI_logo.svg/1200px-BNI_logo.svg.png"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Bank_Central_Asia.svg/640px-Bank_Central_Asia.svg.png"
                     class="img-fluid rounded"
                     width="150"
                     alt="bni" />
@@ -595,35 +637,7 @@
                     autofocus>
                     Salin No. Rekening
                   </button>
-                </div>
-
-                <div
-                  class="col-12 card-body border rounded-4 shadow p-3 m-3"
-                  style="max-width: 25rem"
-                  data-aos="fade-down"
-                  data-aos-duration="1500">
-                  <img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/BANK_BRI_logo.svg/2560px-BANK_BRI_logo.svg.png"
-                    class="img-fluid rounded"
-                    width="150"
-                    alt="bri" />
-
-                  <p class="card-text mt-3 mb-0" style="font-size: 0.9rem">
-                    No. Rekening 123456789
-                  </p>
-                  <p class="card-text" style="font-size: 0.9rem">
-                    a.n Lorem ipsum dolor
-                  </p>
-
-                  <!-- Ubah juga data-nomer sesuai dengan no rekening -->
-                  <button
-                    class="btn btn-light btn-sm rounded-3"
-                    data-nomer="123456789"
-                    onclick="util.salin(this)"
-                    autofocus>
-                    Salin No. Rekening
-                  </button>
-                </div>
+                </div>                
               </div>
             </div>
           </div>
@@ -801,7 +815,7 @@
           </div>
 
           <h1 class="font-esthetic my-4" style="font-size: 2.5rem">
-            Yadi & Putri
+            Muliyadi & Putriani
           </h1>
           <div id="nama-tamu"></div>
 
