--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
     <meta
       property="og:image"
-      content="/assets/images/thumbnail3.jpeg"
+      content="https://www.canva.com/design/DAFzXJtBuos/_hFMQLV7yEMLuaat7XBcJg/edit?utm_content=DAFzXJtBuos&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
       alt="bg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
@@ -623,10 +623,10 @@
                     alt="bni" />
 
                   <p class="card-text mt-3 mb-0" style="font-size: 0.9rem">
-                    No. Rekening 123456789
+                    No. Rekening 6880674771
                   </p>
                   <p class="card-text" style="font-size: 0.9rem">
-                    a.n Lorem ipsum dolor
+                    a.n Muliyadi
                   </p>
 
                   <!-- Ubah juga data-nomer sesuai dengan no rekening -->
