--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
     <meta
       property="og:image"
-      content="https://www.canva.com/design/DAFzXJtBuos/_hFMQLV7yEMLuaat7XBcJg/edit?utm_content=DAFzXJtBuos&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+      content="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Bank_Central_Asia.svg/640px-Bank_Central_Asia.svg.png"
       alt="bg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
