--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
     <meta
       property="og:image"
-      content="https://naurafurniture.my.canva.site/mempelai"
+      content="https://www.canva.com/design/DAFzXJtBuos/E3gElTNrVH0YTZJWbfqNXQ/view?utm_content=DAFzXJtBuos&utm_campaign=designshare&utm_medium=link&utm_source=editor"
       alt="bg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
