--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
     <meta
       property="og:image"
-      content="https://images.pexels.com/photos/19078882/pexels-photo-19078882.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+      content="https://www.pexels.com/id-id/foto/19078882/"
       alt="bg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
