--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
     <meta
       property="og:image"
-      content="https://www.pexels.com/id-id/foto/19078882/"
+      content="https://drive.google.com/file/d/1lGVvhoRwjGjZvbYa1S2VEjR9q5Usfu8y/view?usp=drive_link"
       alt="bg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
