--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
     <title>Undangan Pernikahan Yadi & Putri</title>
 
     <!-- SEO Tag -->
-    <meta property="og:title" content="Undangan Pernikahan Yadi & Putri" />
-    <meta property="og:description" content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
-    <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1lGVvhoRwjGjZvbYa1S2VEjR9q5Usfu8y" alt="bg" />
+     <meta property="og:title" content="Undangan Pernikahan Yadi & Putri" />
+    <meta
+      property="og:description"
+      content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
+    <meta
+      property="og:image"
+      content="https://drive.google.com/uc?export=view&id=1lGVvhoRwjGjZvbYa1S2VEjR9q5Usfu8y" alt="bg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="id_ID" />
     <meta property="og:site_name" content="Undangan" />
     <meta property="og:url" content="https://undangan-yadi-dan-putri.vercel.app/" />
-
 
     <!-- Preconnect CDN -->
     <link
