--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
     <meta
       property="og:image"
-      content="https://drive.google.com/uc?export=view&id=1lGVvhoRwjGjZvbYa1S2VEjR9q5Usfu8y" alt="bg" />
+      content="https://drive.google.com/file/d/1lGVvhoRwjGjZvbYa1S2VEjR9q5Usfu8y/view?usp=sharing" alt="bg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
     <meta property="og:type" content="website" />
