--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta
       property="og:image"
       content="https://drive.google.com/file/d/1lGVvhoRwjGjZvbYa1S2VEjR9q5Usfu8y/view?usp=sharing" alt="bg" />
-    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="id_ID" />
