--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="id_ID" />
     <meta property="og:site_name" content="Undangan" />
-    <meta property="og:url" content="https://undangan-yadi-dan-putri.vercel.app/" />
+    <meta property="og:url" content="https://commons.wikimedia.org/" />
 
     <!-- Preconnect CDN -->
     <link
