--- a/index.html
+++ b/index.html
@@ -17,19 +17,15 @@
     <title>Undangan Pernikahan Yadi & Putri</title>
 
     <!-- SEO Tag -->
-     <meta property="og:title" content="Undangan Pernikahan Yadi & Putri" />
-    <meta
-      property="og:description"
-      content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
-    <meta
-      property="og:image"
-      content="https://upload.wikimedia.org/wikipedia/commons/5/50/Mempelai.jpg" />
-    <meta property="og:image:type" content="image/jpg" />
-    <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="id_ID" />
-    <meta property="og:site_name" content="Undangan" />
-    <meta property="og:url" content="https://commons.wikimedia.org/" />
+     <meta property="og:title" content="Undangan Pernikahan Wahyu & Riski">
+<meta property="og:description" content="Website Undangan Pernikahan Wahyu & Riski Secara Online">
+<meta property="og:image" content="https://ulems.my.id/assets/images/bg.jpeg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:alt" content="Undangan Pernikahan Wahyu & Riski">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="id_ID">
+<meta property="og:site_name" content="Undangan">
+<meta property="og:url" content="https://ulems.my.id/">
 
     <!-- Preconnect CDN -->
     <link
