--- a/index.html
+++ b/index.html
@@ -17,20 +17,15 @@
     <title>Undangan Pernikahan Yadi & Putri</title>
     
     <!-- SEO Tag -->
-    <meta property="og:title" content="Undangan Pernikahan Yadi & Putri" />
-    <meta
-      property="og:description"
-      content="Website Undangan Pernikahan Yadi & Putri Secara Online" />
-    <meta
-      property="og:image"
-      content="https://ulems.my.id/assets/images/bg.jpeg"
-      alt="bg" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri" />
-    <meta property="og:type" content="website" />
-    <meta property="og:locale" content="id_ID" />
-    <meta property="og:site_name" content="Undangan" />
-    <meta property="og:url" content="https://ulems.my.id/" />
+    <meta property="og:title" content="Undangan Pernikahan Yadi & Putri">
+    <meta property="og:description" content="Website Undangan Pernikahan Yadi & Putri Secara Online">
+    <meta property="og:image" content="https://ulems.my.id/assets/images/bg.jpeg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:alt" content="Undangan Pernikahan Yadi & Putri">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="id_ID">
+    <meta property="og:site_name" content="Undangan">
+    <meta property="og:url" content="https://undangan-yadi-dan-putri.vercel.app/" />
      
     <!-- Preconnect CDN -->
     <link
@@ -139,7 +134,7 @@
           <div class="py-4">
             <div class="img-crop border-3 border-light shadow mx-auto">
               <img
-                src="./assets/images/thumbnail1.png"
+                src="./assets/images/thumbnail.png"
                 alt="bg"
                 onclick="util.modal(this)" />
             </div>
@@ -148,7 +143,7 @@
           <h1 class="font-esthetic my-4" style="font-size: 3rem">
             Muliyadi & Putriani
           </h1>
-          <h4>Senin, 11 Desember 2023</h4>
+          <h4>Minggu, 10 Desember 2023</h4>
 
           <a
             class="btn btn-outline-light btn-sm shadow rounded-pill px-3 my-2"
@@ -267,7 +262,7 @@
               <!-- Ganti waktunya pada data-waktu (sesuai format tersebut) -->
               <div
                 class="row justify-content-center"
-                data-waktu="2023-12-11 00:00:00"
+                data-waktu="2023-12-10 00:07:00"
                 id="tampilan-waktu">
                 <div class="col-3 p-1">
                   <h2 class="d-inline m-0 p-0" id="hari">0</h2>
@@ -296,12 +291,12 @@
             <div class="overflow-x-hidden">
               <div class="py-2" data-aos="fade-left" data-aos-duration="1500">
                 <h1 class="font-esthetic" style="font-size: 2rem">Akad</h1>
-                <p>Pukul 10.00 WIB - Selesai</p>
+                <p>Pukul 07.00 WIB - 08.00 WIB</p>
               </div>
 
               <div class="py-2" data-aos="fade-right" data-aos-duration="1500">
                 <h1 class="font-esthetic" style="font-size: 2rem">Resepsi</h1>
-                <p>Pukul 13.00 WIB - Selesai</p>
+                <p>Pukul 08.00 WIB - Selesai</p>
               </div>
             </div>
 
@@ -324,6 +319,10 @@
     </a>
     <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem">
       Kota Agung,Kec. Kota Agung, Kabupaten Lahat, Sumatera Selatan
+    </p>
+    <p class="mb-0 mt-1 mx-1 pb-4" style="font-size: 0.9rem">
+      (Depan SMPN 1 Kota Agung)
+
     </p>
   </div>
 </div>
@@ -811,7 +810,7 @@
           </h1>
 
           <div class="img-crop border-3 border-light shadow mb-4 mx-auto">
-            <img src="./assets/images/thumbnail1.png" alt="bg" />
+            <img src="./assets/images/thumbnail.png" alt="bg" />
           </div>
 
           <h1 class="font-esthetic my-4" style="font-size: 2.5rem">
@@ -871,7 +870,7 @@
               class="d-flex justify-content-center align-items-center"
               style="height: 100%">
               <img
-                src="./assets/images/thumbnail1.png"
+                src="./assets/images/thumbnail.png"
                 class="w-100"
                 alt="foto"
                 id="show-modal-image" />
