--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/assets/images/galeri8.JPG"
+                    src="/assets/images/galeri8.jpg"
                     class="d-block w-100"
                     onclick="util.modal(this)" />
                 </div>
