--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="id_ID">
     <meta property="og:site_name" content="Undangan">
-    <meta property="og:url" content="https://hesratester.000webhostapp.com/" />
+    <meta property="og:url" content="https://undangan-yadi-dan-putri.vercel.app/" />
      
     <!-- Preconnect CDN -->
     <link
