--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
       class="btn btn-light btn-sm rounded-circle btn-music"
       onclick="util.play(this)"
       data-status="true"
-      data-url="./assets/music/sound.mp3">
+      data-url="./assets/music/sound1.mpeg">
       <i class="fa-solid fa-circle-pause"></i>
     </button>
 
