--- a/index.html
+++ b/index.html
@@ -792,6 +792,15 @@
                 ><a target="_blank" href="https://github.com/HeSraOne"
                   >Heri Saputra</a
                 >
+                <div class="col-auto">
+    <small>
+        <i class="fa-brands fa-instagram me-1"></i
+        ><a target="_blank" href="https://www.instagram.com/heri.bhara/"
+            >Heri Saputra</a
+        >
+    </small>
+</div>
+
               </small>
             </div>
           </div>
