--- a/index.html
+++ b/index.html
@@ -393,19 +393,19 @@
               <div class="carousel-inner rounded-4">
                 <div class="carousel-item active">
                   <img
-                    src="/assets/images/galeri1.jpg"
+                    src="/assets/images/galeri1.jpeg"
                     class="d-block w-100"
                      />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/assets/images/galeri2.jpg"
+                    src="/assets/images/galeri2.jpeg"
                     class="d-block w-100"
                      />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/assets/images/galeri3.jpg"
+                    src="/assets/images/galeri3.jpeg"
                     class="d-block w-100"
                      />
                 </div>
