--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
               <!-- Ganti waktunya pada data-waktu (sesuai format tersebut) -->
               <div
                 class="row justify-content-center"
-                data-waktu="2023-12-10 00:07:00"
+                data-waktu="2024-06-30 00:08:00"
                 id="tampilan-waktu">
                 <div class="col-3 p-1">
                   <h2 class="d-inline m-0 p-0" id="hari">0</h2>
@@ -819,7 +819,7 @@
           </div>
 
           <h1 class="font-esthetic my-4" style="font-size: 2.5rem">
-            Muliyadi & Putriani
+            Muhammad Saddam & Winda Rastika Ningsih 
           </h1>
           <div id="nama-tamu"></div>
 
