--- a/index.html
+++ b/index.html
@@ -141,7 +141,13 @@
           </div>
 
           <h1 class="font-esthetic my-4" style="font-size: 3rem">
-            Muhammad Saddam & Winda Rastika Ningsih
+            Muhammad Saddam
+          </h1>
+          <h1 class="font-esthetic my-4" style="font-size: 3rem">
+            &
+          </h1>
+          <h1 class="font-esthetic my-4" style="font-size: 3rem">
+            Winda Rastika Ningsih 
           </h1>
           <h4>Minggu, 30 Juni 2024</h4>
 
@@ -819,7 +825,13 @@
           </div>
 
           <h1 class="font-esthetic my-4" style="font-size: 2.5rem">
-            Muhammad Saddam & Winda Rastika Ningsih 
+            Muhammad Saddam
+          </h1>
+          <h1 class="font-esthetic my-4" style="font-size: 2.5rem">
+            &
+          </h1>
+          <h1 class="font-esthetic my-4" style="font-size: 2.5rem">
+            Winda Rastika Ningsih 
           </h1>
           <div id="nama-tamu"></div>
 
