--- a/index.html
+++ b/index.html
@@ -375,27 +375,7 @@
                       data-bs-target="#carousel-foto-satu"
                       data-bs-slide-to="4"
                       aria-label="Slide 5"></button>
-              <button type="button"
-                      data-bs-target="#carousel-foto-satu"
-                      data-bs-slide-to="5"
-                      aria-label="Slide 6"></button>
-               <button type="button"
-                      data-bs-target="#carousel-foto-satu"
-                      data-bs-slide-to="6"
-                      aria-label="Slide 7"></button>
-              <button type="button"
-                      data-bs-target="#carousel-foto-satu"
-                      data-bs-slide-to="7"
-                      aria-label="Slide 8"></button>                     
-              <button type="button"
-                      data-bs-target="#carousel-foto-satu"
-                      data-bs-slide-to="8"
-                      aria-label="Slide 9"></button>
-              <button type="button"
-                      data-bs-target="#carousel-foto-satu"
-                      data-bs-slide-to="9"
-                      aria-label="Slide 10"></button>
-            </div>
+              </div>
               <div class="carousel-inner rounded-4">
                 <div class="carousel-item active">
                   <img
@@ -417,71 +397,10 @@
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/assets/images/galeri4.jpg"
+                    src="/assets/images/galeri4.jpeg"
                     class="d-block w-100"
                      />
                 </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri5.jpg"
-                    class="d-block w-100"
-                     />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri6.jpg"
-                    class="d-block w-100"
-                    onclick="util.modal(this)" />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri7.jpg"
-                    class="d-block w-100"
-                    onclick="util.modal(this)" />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri8.jpg"
-                    class="d-block w-100"
-                    onclick="util.modal(this)" />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri9.jpg"
-                    class="d-block w-100"
-                    onclick="util.modal(this)" />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri10.jpg"
-                    class="d-block w-100"
-                    onclick="util.modal(this)" />
-                </div>
-              </div>
-
-              <button
-                class="carousel-control-prev"
-                type="button"
-                data-bs-target="#carousel-foto-satu"
-                data-bs-slide="prev">
-                <span
-                  class="carousel-control-prev-icon"
-                  aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-
-              <button
-                class="carousel-control-next"
-                type="button"
-                data-bs-target="#carousel-foto-satu"
-                data-bs-slide="next">
-                <span
-                  class="carousel-control-next-icon"
-                  aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-
             <div
               id="carousel-foto-dua"
               data-aos="fade-up"
@@ -516,49 +435,33 @@
                   data-bs-target="#carousel-foto-dua"
                   data-bs-slide-to="4"
                   aria-label="Slide 5"></button>  
-                <button
-                  type="button"
-                  data-bs-target="#carousel-foto-dua"
-                  data-bs-slide-to="5"
-                  aria-label="Slide 6"></button>  
               </div>
 
               <div class="carousel-inner rounded-4">
                 <div class="carousel-item active">
                   <img
-                    src="/assets/images/galeri11.jpg"
+                    src="/assets/images/galeri5.jpeg"
                     class="d-block w-100"
                     onclick="util.modal(this)" />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/assets/images/galeri12.jpg"
+                    src="/assets/images/galeri6.jpeg"
                     class="d-block w-100"
                     onclick="util.modal(this)" />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/assets/images/galeri13.jpg"
+                    src="/assets/images/galeri7.jpeg"
                     class="d-block w-100"
                     onclick="util.modal(this)" />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="/assets/images/galeri14.jpg"
+                    src="/assets/images/galeri8.jpeg"
                     class="d-block w-100"
                     onclick="util.modal(this)" />
                 </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri15.jpg"
-                    class="d-block w-100"
-                    onclick="util.modal(this)" />
-                </div>
-                <div class="carousel-item">
-                  <img
-                    src="/assets/images/galeri16.jpg"
-                    class="d-block w-100"
-                    onclick="util.modal(this)" />
                 </div>
               </div>
 
@@ -825,7 +728,7 @@
       class="btn btn-light btn-sm rounded-circle btn-music"
       onclick="util.play(this)"
       data-status="true"
-      data-url="./assets/music/sound1.mpeg">
+      data-url="./assets/music/ost-bermuara.mp3">
       <i class="fa-solid fa-circle-pause"></i>
     </button>
 
