--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <body
     data-email="user@example.com"
     data-password="12345678"
-    data-url="https://api-yadi.vercel.app/"
+    data-url="https://backend-undangan-new.vercel.app/"
     style="overflow-y: hidden">
     <!-- Navbar Bottom -->
     <nav
